--- a/test_mustache_template1.mustache
+++ b/test_mustache_template1.mustache
@@ -1,5 +1,9 @@
+{{#person}}
+
 Hello {{name}}
 You have just won {{value}} dollars!
 {{#in_ca}}
 Well, {{taxed_value}} dollars, after taxes.
 {{/in_ca}}
+
+{{/person}}
